2004-05-24 19:20  jensens
    * Changed permission for download tab an ATFile. Dont confuse the average
      user with the green edit frame 

2004-05-24 13:29  tiran

	* version.txt, docs/HISTORY.txt, docs/INSTALL.txt: Preparing beta5
	  release

2004-05-21 20:44  tiran

	* config.py, types/ATFile.py, types/ATImage.py: Automagically
	  setting id including filename cleanup

2004-05-21 20:22  tiran

	* types/: ATFile.py, ATImage.py: Added code for setting id
	  according to the filename

2004-05-21 11:12  tiran

	* skins/ATContentTypes/atct_edit.cpt: Shrinked edit template by
	  reusing the base_edit template

2004-05-21 09:44  tiran

	* CalendarSupport.py, Extensions/Install.py, docs/HISTORY.txt,
	  tests/ATCTSiteTestCase.py, tests/common.py,
	  tests/testATDocument.py, tests/testATEvent.py, types/ATFile.py,
	  types/ATImage.py: Fixed a bunch of bugs reported on SF.net

2004-05-21 09:11  tiran

	* HistoryAware.py: Security fixes Add more comments

2004-05-21 01:54  lele

	* tests/testATDocument.py: New test against loosing content type
	  upon renaming.

2004-05-21 00:59  tiran

	* types/ATDocument.py: Fixed from lelit for migration problem

2004-05-20 14:44  tesdal

	* tests/ATCTSiteTestCase.py, types/schemata.py: Added
	  languageIndependent to some of the Event fields.  Made the tests
	  run again. Now they don't pass, but that should be due to AT
	  tests not passing.

2004-05-18 22:40  tiran

	* types/schemata.py: Moved to new ValidationChain syntax

2004-05-17 17:41  tiran

	* types/: ATFile.py, ATImage.py: Fixed #955271 content type and
	  filename not correctly set

2004-05-17 17:40  tiran

	* CalendarSupport.py: Fixed LF

2004-05-15 03:54  tiran

	* tests/: ATCTSiteTestCase.py, ATCTTestCase.py, common.py,
	  testATDocument.py, testATEvent.py, testATFavorite.py,
	  testATFile.py, testATFolder.py, testATImage.py, testATLink.py,
	  testATNewsItem.py: Moved field test into a site based test
	  Wrapped dummies into a wrapper in the site
